--- a/wouso/resources/templates/top/sidebar.html
+++ b/wouso/resources/templates/top/sidebar.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% if top.disabled %}
-    {% trans 'Top has been disabled' %}
+    {% trans 'Leaderboard has been disabled' %}
 {% else %}
     {% if False %}
         <ol class="top">
