files: Add number of available files in summary

--- a/wouso/interface/apps/files/templates/files/sidebar.html
+++ b/wouso/interface/apps/files/templates/files/sidebar.html
@@ -5,6 +5,11 @@
 
 {% block content %}
 
+    {% if number_of_files %}
+        {{ number_of_files }} {% trans 'files are available.' %}
+    {% else %}
+        {% trans 'No files are available.' %}
+    {% endif %}
     <a href="{% url files_index_view %}">{% trans 'View all' %}</a>
 
 {% endblock %}
