--- a/wouso/resources/templates/profile/profile.html
+++ b/wouso/resources/templates/profile/profile.html
@@ -45,15 +45,21 @@
 
     <div class="actions">
         {% if profile.user.id != user.id %}
+            {% comment "Use text for message label." %}
             <a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">✉</a>
+            {% endcomment %}
+            <a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">Send message</a>
         {% endif %}
         {% if not config_disable_magic %}
             <a class="button button-min" href="{% url magic_cast profile.id%}" title="{% trans 'Cast a spell on this player' %}">✤</a>
         {% endif %}
+        {% comment "Disable profile editing" %}
         {% if profile.user.id == user.id %}
             <a class="button button-min" href="{% url set_profile %}" title="{% trans 'Set your profile' %}">S</a>
         {% endif %}
+        {% endcomment %}
 
+        {% comment "No challenges" %}
         {% ifnotequal user.get_profile.id profile.id %}
             {% if challenge_launched_recently %}
                 <span class="button">{% trans 'Challenged' %}</span>
@@ -61,7 +67,9 @@
                 <a class="button" href="{% url challenge_launch profile.id %}">{% trans 'Challenge!' %}</a>
             {% endif %}
         {% endifnotequal %}
+        {% endcomment %}
 
+        {% comment "No special quest" %}
         {% if specialquest_button.MATE %}
             <span class="button">{% trans 'Special mate' %}</span>
         {% elif specialquest_button.OTHER %}
@@ -72,8 +80,11 @@
             <a href="{% url specialquest_invite profile.id %}"
                title="{% trans 'Invite in my Special Quest group' %}">{% trans 'Invite' %}</a>
         {% endif %}
+        {% endcomment %}
 
-        <a class="button" href="{% url report_player profile.id%}">Report</a>
+        {% comment "No reporting" %}
+        <a class="button" href="{% url report_player profile.id%}">{% trans 'Report' %}</a>
+        {% endcomment %}
     </div>
 
     <div class="second">{% trans 'Last seen' %}:
@@ -92,7 +103,9 @@
     {% endif %}
     {% if user.is_superuser %}
     <div class="actions">
+        {% comment "Not really useful" %}
         <span class="button-list">Admin:</span>
+        {% endcomment %}
         <a class="button" href="{% url challenge_stats profile.id %}">{% trans 'Challenges' %}</a>
         <a class="button button-min" href="{% url admin:auth_user_change profile.user.id %}">✍</a>
         <a class="button" href="{% url impersonate profile.id %}">Impersonate</a>
