--- a/wouso/interface/apps/lesson/templates/lesson/index.html
+++ b/wouso/interface/apps/lesson/templates/lesson/index.html
@@ -19,7 +19,7 @@
         {% endif %}
     {% endfor %}
 {% else %}
-    No categories have been added yet.
+    {% trans 'No lessons have been added.' %}
 {% endif %}
 
 
