wouso: Update "Search" button to "Search player"

--- a/wouso/resources/templates/site_base.html
+++ b/wouso/resources/templates/site_base.html
@@ -47,7 +47,7 @@
     <div id="search">
         <form method="post" action="{{ basepath }}/search/" style="float:right;">
             <input id="query" type="text" name="query" size="10" value="{{ search_query }}"/>
-            <button type=submit>{% trans 'Search' %}</button>
+            <button type=submit>{% trans 'Search player' %}</button>
         </form>
         <script type="text/javascript">
             var myID = '{{player.id}}'
