--- a/wouso/interface/forum/templates/forum/forum_base.html
+++ b/wouso/interface/forum/templates/forum/forum_base.html
@@ -6,7 +6,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="{{ basepath }}/static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="{{ basepath }}/static/css/bootstrap/bootstrap.min.css" rel="stylesheet"/>
     <link href="{{ basepath }}/static/css/forum-style.css" rel="stylesheet"/>
     <script type="text/javascript" src="{{ basepath }}/static/js/bootstrap.min.js"></script>
 
