--- a/wouso/resources/templates/cpanel/index.html
+++ b/wouso/resources/templates/cpanel/index.html
@@ -12,10 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <TITLE>{% block title %}WoUSO Control Panel{% endblock %}</TITLE>
     <!-- Bootstrap CSS !-->
-    <link href="{{ basepath }}/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ basepath }}/static/css/cpanel-style.css" rel="stylesheet">
-    <link href="{{ basepath }}/static/css/dashboard.css" rel="stylesheet">
-    <link href="{{ basepath }}/static/css/sticky-footer.css" rel="stylesheet">
+	<link rel="stylesheet" href="{{ basepath }}/static/css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ basepath }}/static/css/cpanel-style.css">
+    <link rel="stylesheet" href="{{ basepath }}/static/css/dashboard.css">
+    <link rel="stylesheet" href="{{ basepath }}/static/css/sticky-footer.css">
 
     <script type="text/javascript" src="{{ basepath }}/static/js/jquery-1.8.1.min.js"></script>
     <script type="text/javascript" src="{{ basepath }}/static/js/jquery-ui.min.js"></script>
