--- a/wouso/resources/static/css/splash.css
+++ b/wouso/resources/static/css/splash.css
@@ -1,60 +1,80 @@
-html, body {
-	margin:0; padding:0;
-	height:100%;
-}
-
 body {
-    font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
-    font-size: 0.8em;
+	margin: 50px 0 0 0;
+	padding: 0;
+	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
+	background: url(../img/geometry2.png) repeat top fixed;
+	font-family: 'Open Sans', 'Arial', sans-serif;
+	text-rendering: optimizeLegibility;
+	-webkit-text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+
 }
 
-#floater {
-	position:relative; float:left;
-	height:50%;	margin-bottom:-18%;
-	width:1px;
-}
-
-#centered {
-	position:relative; clear:left;
-	height:450px; width:100%; max-width:650px; min-width:300px;
-	margin:0 auto;
-	background:#fff;
-	border-top:1px solid #666;
-}
-
-#bottom {
-	position:absolute;
-	bottom:0; right:10px;
+#container {
+	width: 100%;
+	height: 450px;
+	max-width: 650px;
+	min-width: 300px;
+	margin: 0 auto;
 }
 
 #logo {
-    background:url('../img/logo.png') 50% 50% no-repeat;
-    height: 250px;
-}
-#side {
-	position:absolute; left:0; top:400px; bottom:0; right:0;
-	padding:10px; margin:5px;
-    background: #ddd;
-    text-align: right;
-    border-bottom: 1px solid #666;
-    z-index: 1000;
+	background: url('../img/logo.png') 50% 50% no-repeat;
+	height: 220px;
 }
 
-#content {
-	position:absolute; left:0; right:0; top:200px; bottom:0;
-	overflow:auto; 
-	padding:20px; margin:10px;
-    text-align: center;
+.title {
+	padding: 20px;
+	text-align: center;
+	color: #666E73;
 }
-button {
-    display: block;
-    float: right;;
-    text-align: center;
-    min-width: 70px;
-    max-width: 150px;
-    border: 1px solid #aaa;
-    padding: 3px;
-    margin: 1px;
-    background-color: #ddd;
-    color: black;
+
+.login-box {
+	height: 300px;
+	background: #1493D1;
+	background: rgba(255, 255, 255, 0.4);
+}
+
+.about {
+	padding: 20px;
+	height: 100%;
+	color: #666E73;
+	float: left;
+}
+
+#login {
+	height: 100%;
+	background: #FFF;
+	padding: 20px 20px;
+	border: 5px solid #6FCBF5;
+}
+
+#login .form-group {
+	margin: 5px 0;
+}
+
+#login label {
+	width: 100%;
+	font-weight: normal;
+	text-transform: capitalize;
+	color: #0C86BF;
+}
+
+#login input {
+	border-radius: 5px;
+}
+
+#login .submit {
+	margin: 20px 0 0 0;
+}
+
+#login .submit button {
+	width: 100%;
+}
+
+#login .help {
+	font-size: 12px;
+	position: absolute;
+	bottom: 10px;
 }
