--- a/wouso/resources/templates/site_base.html
+++ b/wouso/resources/templates/site_base.html
@@ -3,104 +3,110 @@
 {% load artifacts %}
 {% load i18n %}
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-                      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<HEAD>
-    <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <TITLE>{% block title %}{{config_title}}{% endblock %}</TITLE>
-    <LINK rel="stylesheet" type="text/css" href="{{ basepath }}/static/css/style.css" />
-    <style type="text/css">
-        @import url("{{ basepath }}/static/css/autocomplete.css");
-        {% if config_logo %}
-        div#logo {
-            background: url({{ config_logo}}) no-repeat;
-        }
-        {% endif %}
-        {% block css %}{% endblock %}
-    </style>
-    <script type="text/javascript" src="{{ basepath }}/static/js/jquery-1.6.2.min.js"></script>
-    <script type="text/javascript" src="{{ basepath }}/static/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="{{ basepath }}/static/js/jquery.autocomplete.js"></script>
-    <script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script>
-    <script type="text/javascript" src="{{ basepath }}/static/js/jquery.timers.js"></script>
-    <script type="text/javascript" src="{{ basepath }}/static/js/ajaxify.js"></script>
+<!DOCTYPE html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>{% block title %}{{config_title}}{% endblock %}</title>
 
-    {% if config_header_autoreload %}
-    <script type="text/javascript">
-        $(document).ready(function (){$(document).everyTime(10000, reload_header);});
-    </script>
-    {% endif %}
+	<!-- Stylesheets -->
+	{% if config_theme %}
+	<!-- <link rel="stylesheet" href="{{ basepath }}/static/themes/{{ config_theme }}/styles.css" /> -->
+	{% endif %}
 
-    {% block scripts %}{% endblock %}
-    {% if config_theme %}
-    <LINK rel="stylesheet" type="text/css" href="{{ basepath }}/static/themes/{{ config_theme }}/styles.css" />
-    {% endif %}
-</HEAD>
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700">
+	<!-- <link rel="stylesheet" href="{{ basepath }}/static/css/style.css" /> -->
+	<link rel="stylesheet" href="{{ basepath }}/static/libs/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="{{ basepath }}/static/css/site.css">
+	<link rel="stylesheet" href="{{ basepath }}/static/css/header.css">
+	<link rel="stylesheet" href="{{ basepath }}/static/css/progress.css">
 
-<BODY>
-    <div id="container">
-        {% include 'interface/header.html' %}
+	<!-- TODO: GABI: WHY DO WE NEED THIS !!!!!!???? -->
+	<style type="text/css">
+		/*@import url("{{ basepath }}/static/css/autocomplete.css");
+		{% if config_logo %}
+		div#logo {
+			background: url({{ config_logo}}) no-repeat;
+		}
+		{% endif %}
+		{% block css %}{% endblock %}*/
+	</style>
+</head>
 
-    <div class="spacer"></div>
+<body>
+	{% block header %}
+		{% include 'interface/header.html' %}
+	{% endblock %}
 
-    {% block search %}
-    <div id="search">
-        <form method="post" action="{{ basepath }}/search/" style="float:right;">
-            <input id="query" type="text" name="query" size="10" value="{{ search_query }}"/>
-            <button type=submit>{% trans 'Search player' %}</button>
-        </form>
-        <script type="text/javascript">
-            var myID = '{{player.id}}'
-            var myName = '{{player.nickname}}'
-            $(document).ready(function() {
-            $("#query").autocomplete( "{{ basepath }}/instantsearch/", { minChars:3, matchSubset:1, matchContains:1, cacheLength:10, formatItem:formatItem, onItemSelect:selectItem, selectOnly:1 });
-            });
-        </script>
-    </div>
-    {% endblock %}
+	<section class="container">
 
-    <div class="spacer-search"></div>
+		<div id="search-bar" class="row">
+			{% block search %}
+				<div id="search">
+					<form method="post" action="{{ basepath }}/search/" style="float:right;">
+						<input id="query" type="text" name="query" size="10" value="{{ search_query }}"/>
+						<button type=submit>{% trans 'Search player' %}</button>
+					</form>
+				</div>
+			{% endblock %}
+		</div>
 
-    <div id="sidebar">
-        {% render_sidebar %}
+		<div id="page" class="row">
+			<aside id="sidebar" class="col-md-4">
+				{% include 'interface/progress/progress.html' %}
+				{% include 'interface/leaderboard.html' %}
+				{% block sidebar %}
+				{% endblock %}
+			</aside>
+			<section id="content" class="col-md-8">
+				{% include 'messages.html' %}
+				{% block content %}
+				{% endblock %}
+			</section>
+		</div>
 
-        {% comment %}
-        {% if last10 %}
-            <div class="widget">
-                <h2>{% trans 'Online players' %}</h2>
-                    {% for u in last10 %}
-                        {% player u %}
-                    {% endfor %}
-            </div>
-        {% endif %}
-        {% endcomment %}
-    </div>
+	</section>
+	<footer id="footer">
+		{% block footer %}
+		{% endblock %}
+	</footer>
 
-    <div id="content">
-    {% include 'messages.html' %}
-    {% block content %}
-    {% endblock %}
-    </div>
+	<!-- <div id="PrivatebarUsers"></div> -->
 
-
-    <div id="footer">
-        {% block footer %}
-        {% endblock %}
-    </div>
-
-    <div id="PrivatebarUsers"></div>
-
-    {% autoescape off %}
-    {{ config_hidden_footer }}
+	{% autoescape off %}
+	{{ config_hidden_footer }}
 	{% endautoescape %}
 
-    {% comment "Do not use mobile interface" %}
-    {% if has_mobile %}
-    <div id="mobile-footer">
-        <a href="{% url homepage %}?mobile=0">Desktop</a> |
-        <a href="{% url homepage %}?mobile=1">Mobile</a>
-    </div>
-    {% endif %}
-    {% endcomment %}
-</BODY>
-</HTML>
+	{% comment "Do not use mobile interface" %}
+	{% if has_mobile %}
+	<div id="mobile-footer">
+		<a href="{% url homepage %}?mobile=0">Desktop</a> |
+		<a href="{% url homepage %}?mobile=1">Mobile</a>
+	</div>
+	{% endif %}
+	{% endcomment %}
+
+	<!-- Scripts -->
+	<script type="text/javascript" src="{{ basepath }}/static/libs/jquery/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="{{ basepath }}/static/libs/jquery-ui/jquery-ui.min.js"></script>
+	<!-- <script type="text/javascript" src="{{ basepath }}/static/js/jquery.autocomplete.js"></script> -->
+	<!-- <script type="text/javascript" src="{{ basepath }}/static/js/jquery.timers.js"></script> -->
+	<script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script>
+	<script type="text/javascript" src="{{ basepath }}/static/js/ajaxify.js"></script>
+	<script type="text/javascript" src="{{ basepath }}/static/libs/bootstrap/js/bootstrap.min.js"></script>
+
+	<script type="text/javascript">
+		var myID = '{{player.id}}'
+		var myName = '{{player.nickname}}'
+		$(document).ready(function() {
+			$("#query").autocomplete( "{{ basepath }}/instantsearch/", { minChars:3, matchSubset:1, matchContains:1, cacheLength:10, formatItem:formatItem, onItemSelect:selectItem, selectOnly:1 });
+		});
+	</script>
+
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+	{% block scripts %}{% endblock %}
+
+</body>
+</html>
