--- a/wouso/resources/templates/top/sidebar.html
+++ b/wouso/resources/templates/top/sidebar.html
@@ -2,52 +2,53 @@
 {% load i18n %}
 {% load user %}
 
-{% block title %}<a href="{% url leaderboard %}"}>{% trans 'Leaderboard' %}</a>{% endblock %}
+{% block title %}
+	<a href="{% url leaderboard %}"}>{% trans 'Leaderboard' %}</a>
+{% endblock %}
 
 {% block content %}
+	{% if top.disabled %}
+	    {% trans 'Leaderboard has been disabled' %}
+	{% else %}
+	    {% if False %}
+	        <ol class="top">
+	        {% for u in topusers %}
+	            <li><a  href="{% url player_profile u.id %}"
+	                    rel="{{u.nickname}},{{u.user.first_name}},{{u.points}},{% player_avatar u%},{{ u.level_no }},{{u.id}},1" class="cplayer"
+	                    title="{{ u.group }}/{{ u.race }}  {{u.points}}">{{ u }}</a>
+	            </li>
+	        {% endfor %}
+	        </ol>
+	    {% endif %}
 
-{% if top.disabled %}
-    {% trans 'Leaderboard has been disabled' %}
-{% else %}
-    {% if False %}
-        <ol class="top">
-        {% for u in topusers %}
-            <li><a  href="{% url player_profile u.id %}"
-                    rel="{{u.nickname}},{{u.user.first_name}},{{u.points}},{% player_avatar u%},{{ u.level_no }},{{u.id}},1" class="cplayer"
-                    title="{{ u.group }}/{{ u.race }}  {{u.points}}">{{ u }}</a>
-            </li>
-        {% endfor %}
-        </ol>
-    {% endif %}
+	    <!-- {# <a href="{% url wouso.interface.top.views.gettop %}" class="goto">{% trans 'Current Top' %}</a> #} -->
+	    <!-- <br/> -->
+	    <!-- RD: Link leaderboard in title>
+	    <a href="{% url leaderboard %}" class="goto">{% trans 'Leaderboard' %}</a>
+	    <br/>
+	    -->
+	    <!-- RD: No divisions, quests or challanges.
+	    <a href="{% url division %}" class="goto">{% trans 'My Division' %}</a>
+	    <br/>
+	    {% if not config_disable_challenge_top %}
+	    <a href="{% url wouso.interface.top.views.challenge_top %}" class="goto">{% trans 'Challenge Top' %}</a>
+	    <br/>
+	    {% endif %}
+	    <a href="{% url quest_history %}" class="goto">{% trans 'Quest History' %}</a>
+	    <br/>
+	    -->
+	    <a href="{% url artifact_hof %}" class="goto">{% trans 'Achievements' %}</a>
+	    <br/>
+	    {% if not config_disable_top_pyramid %}
+	    <!-- {# <a href="{% url wouso.interface.top.views.pyramid %}" class="goto">{% trans 'Pyramid' %}</a> #} -->
+	    {% endif %}
 
-    <!-- {# <a href="{% url wouso.interface.top.views.gettop %}" class="goto">{% trans 'Current Top' %}</a> #} -->
-    <!-- <br/> -->
-    <!-- RD: Link leaderboard in title>
-    <a href="{% url leaderboard %}" class="goto">{% trans 'Leaderboard' %}</a>
-    <br/>
-    -->
-    <!-- RD: No divisions, quests or challanges.
-    <a href="{% url division %}" class="goto">{% trans 'My Division' %}</a>
-    <br/>
-    {% if not config_disable_challenge_top %}
-    <a href="{% url wouso.interface.top.views.challenge_top %}" class="goto">{% trans 'Challenge Top' %}</a>
-    <br/>
-    {% endif %}
-    <a href="{% url quest_history %}" class="goto">{% trans 'Quest History' %}</a>
-    <br/>
-    -->
-    <a href="{% url artifact_hof %}" class="goto">{% trans 'Achievements' %}</a>
-    <br/>
-    {% if not config_disable_top_pyramid %}
-    <!-- {# <a href="{% url wouso.interface.top.views.pyramid %}" class="goto">{% trans 'Pyramid' %}</a> #} -->
-    {% endif %}
+	    <!-- RD: No other coins.
+	    {% for c in coin_top_setting %}
+	        <br/>
+	        <a href="{% url top_coin c %}">{% trans 'Top for' %} {{ c }}</a>
+	    {% endfor %}
+	    -->
 
-    <!-- RD: No other coins.
-    {% for c in coin_top_setting %}
-        <br/>
-        <a href="{% url top_coin c %}">{% trans 'Top for' %} {{ c }}</a>
-    {% endfor %}
-    -->
-
-{% endif %}
+	{% endif %}
 {% endblock %}
