--- a/wouso/resources/templates/site_index.html
+++ b/wouso/resources/templates/site_index.html
@@ -32,7 +32,7 @@
 
     <div id="news">
     {% block news %}
-        <h2>{% trans 'News' %}</h2>
+        <h2 class="section_title"> {% trans 'News' %} </h2>
         {% for n in news %}
             <p><a href="{% url news_item_view n.pk %}">{{n.title}}</a></p>
         {% empty %}
@@ -43,4 +43,5 @@
     {% endif %}
     {% endblock %}
     </div>
+
 {% endblock %}
