--- a/wouso/resources/templates/interface/section_base.html
+++ b/wouso/resources/templates/interface/section_base.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 <div class="section">
-    <h2>{% block title %}{% block sectiontitle %}title{% endblock %}{% endblock %}</h2>
+    <h2 class="section_title">
+    	{% block title %}
+    	{% block sectiontitle %}
+    		title
+    	{% endblock %}
+    	{% endblock %}
+    </h2>
     <div class="section-content">
         {% block sectioncontent %}
         {% endblock %}
