--- a/wouso/interface/apps/lesson/templates/lesson/lesson.html
+++ b/wouso/interface/apps/lesson/templates/lesson/lesson.html
@@ -33,7 +33,9 @@
     </p>
 
     {% if lesson.youtube_url %}
-    <iframe width="853" height="480" src="{{ embed_url }}?vq=large" frameborder="0" allowfullscreen></iframe>
+	<div class="embed-responsive embed-responsive-16by9">
+    	<iframe width="480" height="320" src="{{ embed_url }}?vq=large" frameborder="0" allowfullscreen></iframe>
+    </div>
     {% endif %}
 
     {% if through %}
