--- a/wouso/resources/templates/leaderboard.html
+++ b/wouso/resources/templates/leaderboard.html
@@ -10,24 +10,21 @@
 {% if top.disabled %}
     {% trans 'Leaderboard has been disabled.' %}
 {% else %}
-    <!-- RD: Only do races
-    <h3><a href="{% url top_races %}">Top Races</a></h3>
-    -->
 
-    <table border="0" cellspacing="0" cellpadding="0">
-        <tr>
-            <th>{% trans '#' %}</th>
-            <th>{% trans 'Group' %}</th>
-            <th>{% trans 'Points' %}</th>
-        </tr>
-        {% for r in races %}
-        <tr>
-            <td>{{ forloop.counter }}</td>
-            <td>{% player_race r %}</td>
-            <td>{% coin_amount r.points|floatformat:0 %}</td>
-        </tr>
-        {% endfor %}
-    </table>
+	<table border="0" cellspacing="0" cellpadding="0" class="table table-striped table-hover">
+	    <tr>
+	        <th>{% trans 'ID' %}</th>
+	        <th>{% trans 'Group' %}</th>
+	        <th>{% trans 'Points' %}</th>
+	    </tr>
+	    {% for r in races %}
+	    <tr>
+	        <td>{{ forloop.counter }}</td>
+	        <td>{% player_race r %}</td>
+	        <td>{% coin_amount r.points|floatformat:0 %}</td>
+	    </tr>
+	    {% endfor %}
+	</table>
 
     <!-- RD: No groups
     <h3><a href="{% url top_classes %}">Top Groups</a></h3>
