--- a/wouso/resources/templates/site_base.html
+++ b/wouso/resources/templates/site_base.html
@@ -19,17 +19,19 @@
 	<link rel="stylesheet" href="{{ basepath }}/static/css/site.css">
 	<link rel="stylesheet" href="{{ basepath }}/static/css/header.css">
 	<link rel="stylesheet" href="{{ basepath }}/static/css/progress.css">
+	<link rel="stylesheet" href="{{ basepath }}/static/css/lessons.css">
 
 	<!-- TODO: GABI: WHY DO WE NEED THIS !!!!!!???? -->
 	<style type="text/css">
-		/*@import url("{{ basepath }}/static/css/autocomplete.css");
+		@import url("{{ basepath }}/static/css/autocomplete.css");
 		{% if config_logo %}
 		div#logo {
 			background: url({{ config_logo}}) no-repeat;
 		}
 		{% endif %}
-		{% block css %}{% endblock %}*/
 	</style>
+	{% block stylesheets %}
+	{% endblock %}
 </head>
 
 <body>
@@ -38,32 +40,19 @@
 	{% endblock %}
 
 	<section class="container">
-
-		<div id="search-bar" class="row">
-			{% block search %}
-				<div id="search">
-					<form method="post" action="{{ basepath }}/search/" style="float:right;">
-						<input id="query" type="text" name="query" size="10" value="{{ search_query }}"/>
-						<button type=submit>{% trans 'Search player' %}</button>
-					</form>
-				</div>
-			{% endblock %}
-		</div>
-
 		<div id="page" class="row">
-			<aside id="sidebar" class="col-md-4">
-				{% include 'interface/progress/progress.html' %}
-				{% include 'interface/leaderboard.html' %}
-				{% block sidebar %}
-				{% endblock %}
-			</aside>
 			<section id="content" class="col-md-8">
 				{% include 'messages.html' %}
 				{% block content %}
 				{% endblock %}
 			</section>
-		</div>
 
+			<aside id="sidebar" class="col-md-4">
+				{% include 'interface/sidebar/sidebar.html' %}
+				{% block sidebar %}
+				{% endblock %}
+			</aside>
+		</div>
 	</section>
 	<footer id="footer">
 		{% block footer %}
@@ -86,20 +75,35 @@
 	{% endcomment %}
 
 	<!-- Scripts -->
-	<script type="text/javascript" src="{{ basepath }}/static/libs/jquery/jquery-2.1.3.min.js"></script>
-	<script type="text/javascript" src="{{ basepath }}/static/libs/jquery-ui/jquery-ui.min.js"></script>
-	<!-- <script type="text/javascript" src="{{ basepath }}/static/js/jquery.autocomplete.js"></script> -->
+	<script type="text/javascript" src="{{ basepath }}/static/libs/jquery/jquery-2.1.3.js"></script>
+	<!-- <script type="text/javascript" src="{{ basepath }}/static/libs/jquery-ui/jquery-ui.js"></script> -->
+	<script type="text/javascript" src="{{ basepath }}/static/libs/jquery.autocomplete/jquery.autocomplete.js"></script>
 	<!-- <script type="text/javascript" src="{{ basepath }}/static/js/jquery.timers.js"></script> -->
-	<script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script>
+	<script type="text/javascript" src="{{ basepath }}/static/libs/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="{{ basepath }}/static/js/ajaxify.js"></script>
-	<script type="text/javascript" src="{{ basepath }}/static/libs/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="{{ basepath }}/static/js/script.js"></script>
+	<script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script>
 
 	<script type="text/javascript">
-		var myID = '{{player.id}}'
-		var myName = '{{player.nickname}}'
+		// TODO : BUG: must return JSON data from server
+		/*
+		var options = {
+			serviceUrl : "{{ basepath }}/instantsearch/",
+			minChars : 3,
+			paramName: 'q',
+			selectOnly : 1,
+			appendTo: $("#search-bar .suggestion"),
+			formatResult: function (suggestion, currentValue) {
+				console.log(suggestion, currentValue);
+			},
+			onSelect: function (suggestion) {
+				console.log('You selected: ' + suggestion.value + ', ' + suggestion.data);
+			},
+   		};
 		$(document).ready(function() {
-			$("#query").autocomplete( "{{ basepath }}/instantsearch/", { minChars:3, matchSubset:1, matchContains:1, cacheLength:10, formatItem:formatItem, onItemSelect:selectItem, selectOnly:1 });
+			$("#users-query").autocomplete(options);
 		});
+		*/
 	</script>
 
 	<!--[if lt IE 9]>
