--- a/wouso/interface/apps/files/templates/files/index.html
+++ b/wouso/interface/apps/files/templates/files/index.html
@@ -6,18 +6,31 @@
 {% block sectiontitle %}{% trans 'Files' %}{% endblock %}
 
 {% block sectioncontent %}
+<div id="files">
 {% if categories %}
-    {% for c in categories %}
-        <h3>{{ c }}</h3>
-        {% if c.files %}
-        <ol>
-            {% for f in c.files %}
-                <li>[{{ f.type }}] <a href="{{ f.file.url }}">{{ f }}</a> ({{ f.file.size|filesizeformat }})</li>
-            {% endfor %}
-        </ol>
-        {% endif %}
-    {% endfor %}
+	{% for c in categories %}
+		{% if c.files %}
+		<section class="files">
+			<h4>{{ c }}</h4>
+			<table class="table table-striped table-hover">
+				<tr>
+					<th>{% trans 'Format' %}</th>
+					<th>{% trans 'Name' %}</th>
+					<th>{% trans 'Size' %}</th>
+				</tr>
+				{% for f in c.files %}
+				<tr>
+					<td>{{ f.type }}</td>
+					<td><a href="{{ f.file.url }}">{{ f }}</a></td>
+					<td>{{ f.file.size|filesizeformat }}</td>
+				</tr>
+				{% endfor %}
+			</table>
+		</section>
+		{% endif %}
+	{% endfor %}
 {% else %}
-    {% trans 'No files have been added.' %}
+	{% trans 'No files have been added.' %}
 {% endif %}
+</div>
 {% endblock %}
