--- a/wouso/resources/static/css/header.css
+++ b/wouso/resources/static/css/header.css
@@ -65,12 +65,13 @@
 	border-bottom: 1px solid #1caff6;
 }
 
-.circle {
-	width: 68px;
-	height: 68px;
-	display: block;
-	padding: 16px;
-	text-align: center;
-	border-radius: 50%;
-	margin: 0 auto 10px;
+#header .btn {
+	background-color: #5FC6F5;
 }
+
+#header .btn:hover {
+	color: #FFF;
+	background-color: #ED8758;
+}
+
+
