--- a/wouso/resources/static/css/site.css
+++ b/wouso/resources/static/css/site.css
@@ -1,5 +1,5 @@
 body {
-	padding-top: 80px;
+	padding-top: 71px;
 	background: url(../img/geometry2.png) repeat top fixed;
 	font-family: 'Open Sans', 'Arial', sans-serif;
 	text-rendering: optimizeLegibility;
@@ -13,15 +13,92 @@ h1,h2,h3,h4,h5,h6 {
 	margin-bottom: 10px;
 }
 
+.btn:active:focus, .btn:focus,
 a:focus {
 	outline: none;
 }
 
+/*
+ * SEARCH BAR
+ */
+
 #search-bar {
-	margin: 0 0 10px 0;
+	margin: 10px 0 0 0;
+	padding: 10px 0;
+	background: #F9F9F9;
+	position: relative;
+}
+
+#search-bar .btn {
+	border: 1px solid #CCC;
+	border-left-width: 0;
+	color: #555;
+}
+
+#search-bar .btn:hover {
+	background: #DDD;
+}
+
+#search-bar .suggestions {
+	width: 100%;
+	max-height: 300px;
+	padding: 10px;
+	top: 50px;
+	border: 1px solid #DDD;
+	background: #FFF;
+	position: absolute;
+	display: none;
+}
+
+/*
+ * Main Layout
+ */
+
+#page {
+	margin: 20px 0 0 0;
+	background: #FFF;
+	box-shadow: 0px 5px 10px -5px #000;
+}
+
+/*
+ * SideBar
+ */
+#sidebar {
+	background: #F9F9F9;
+	min-height: 1000px;
+}
+
+#sidebar .well {
+	border-radius: 0;
+	box-shadow: none;
+	background: #FFF;
+}
+
+/*
+ * Content
+ */
+#content {
+	padding: 30px;
+}
+
+#content .section_title {
+	margin: 0 0 20px 0;
+	padding: 0 0 20px 0;
+	border-bottom: 1px solid #DDD;
+}
+
+#content .course {
+
 }
 
 
-#sidebar {
-	float: right;
+#content #files .files h4 {
+	padding: 10px 20px;
+	margin: 10px 0 0 0;
+	background: #60C6F4;
+	color: #FFF;
+}
+
+#content table {
+	border: 1px solid #DDD;
 }
