--- a/wouso/resources/templates/interface/sidebar/leaderboard.html
+++ b/wouso/resources/templates/interface/sidebar/leaderboard.html
@@ -3,7 +3,7 @@
 {% load ui %}
 
 {% if user.is_authenticated %}
-<div id="leaderboard" class="row well">
+<div id="leaderboard" class="well">
 	<h4> Leaderboard </h4>
 </div>
 {% endif %}
