--- a/wouso/games/quiz/templates/quiz/quiz.html
+++ b/wouso/games/quiz/templates/quiz/quiz.html
@@ -9,6 +9,7 @@
 {% block scripts %}
     {{ block.super }}
     <script type="text/javascript" src="{{ basepath }}/static/js/timer.js"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 {% endblock %}
 
 {% block sectioncontent %}
