--- a/wouso/resources/templates/cpanel/index.html
+++ b/wouso/resources/templates/cpanel/index.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script>
     <script type="text/javascript" src="{{ basepath }}/static/js/jquery.timers.js"></script>
     <script type="text/javascript" src="{{ basepath }}/static/js/ajaxify.js"></script>
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <script type="text/javascript">
         var url_base = '{{ basepath }}';
